# worklog

./: .env.example  .gitignore  README.md  package.json
.github/workflows/: desktop-build.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_work_log_date_range.py  0003_report_email_delivery.py  0004_llm_timeout_seconds.py  0005_report_schedules.py  0006_report_schedule_template.py
backend/app/: __init__.py  config.py  constants.py  database.py  default_templates.py  main.py  models.py  scheduler.py  schemas.py
backend/app/services/: docx_export.py  email.py  llm.py  periods.py  reports.py  templates.py
backend/tests/: conftest.py  test_api.py  test_docx_export.py  test_email.py  test_llm.py  test_periods.py  test_scheduler.py  test_templates.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos-signing.conf.example.json  tauri.windows-signing.conf.example.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: commands.rs  db.rs  documents.rs  error.rs  lib.rs  llm.rs  mail.rs  main.rs  models.rs  reports.rs  scheduler.rs  secrets.rs  templates.rs
