[package]
name = "worklog"
version = "2.0.0"
description = "Local work log and report desktop application"
authors = ["Garden12138"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "worklog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
minijinja = { version = "2", features = ["loader", "json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
docx-rs = "0.4"
pulldown-cmark = "0.13"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native"] }
regex = "1"
url = "2"
